--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ node_js:
 
 after_script:
   - gitbook build
-  - cd ./_book
+  - cd ./dist
   - git init
   - git config user.name "${USER_NAME}"
   - git config user.email "${USER_EMAIL}"
   - git add .
-  - git commit -m "publish gitbook"
+  - git commit -m "publish register"
   - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
 
 branches:
